# BlackHouse

./: .gitignore  CMakeLists.txt  README.md  RH_assert.h  RH_color.h  RH_common.h  RH_config.h  RH_data.c  RH_data.h  RH_dummy.c  RH_font.c  RH_font.h  RH_graphic.c  RH_graphic.h  RH_image.c  RH_image.h  RH_math.c  RH_math.h  main.c
.Xcode12/BlackHouse.xcodeproj/: project.pbxproj
.Xcode12/BlackHouse.xcodeproj/project.xcworkspace/xcuserdata/randle_h.xcuserdatad/: UserInterfaceState.xcuserstate
.Xcode12/BlackHouse.xcodeproj/xcuserdata/randle_h.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
.Xcode12/BlackHouse.xcodeproj/xcuserdata/randle_h.xcuserdatad/xcschemes/: xcschememanagement.plist
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
DEV_C++ 5.11/: DEV_C++ 5.11.dev  DEV_C++ 5.11.layout  Makefile.win  main.c
GCC/: gcc_cmd.txt
XCode_12.4/XCode_12.4/: main.c
XCode_12.4/XCode_12.4.xcodeproj/: project.pbxproj
Xcode_11/Xcode_11/: main.c
Xcode_11/Xcode_11.xcodeproj/: project.pbxproj
Xcode_11/self/: RH_dummy.c
Xcode_12/Xcode_12/: main.c
Xcode_12/Xcode_12.xcodeproj/: project.pbxproj
clang-1200.0.32.29/: BLK_data.lib  BLK_dsp.lib  BLK_graphic.lib  BLK_image.lib  BLK_lib.lib  BLK_math.lib  BLK_poker.lib  BLK_time.lib  BLK_utility.lib
core/: BLK_dsp.c  BLK_dsp.h  BLK_graphic.c  BLK_graphic.h  BLK_image.c  BLK_image.h  BLK_math.c  BLK_math.h
lib/: RH_data.lib  RH_dsp.lib  RH_graphic.lib  RH_image.lib  RH_lib.lib  RH_math.lib  RH_neuron.lib  RH_time.lib  RH_utility.lib
(+9 files in other folders)
